# coleccion_flujo_C-

./: CMakeLists.txt  README.md  main.cpp  main.h  prueba.txt
ciencia/: ciencia.cpp  ciencia.h
ciencia/fisica/: fisica.cpp
ciencia/matematicas/: matematicas.cpp  matematicas.h
geometria/: circulo.cpp  circulo.h  cuadrado.cpp  cuadrado.h  geometria.h  triangulo.cpp  triangulo.h
matematicas/: matematicas.cpp  matematicas.h
